@@ -1,10 +1,9 @@
-package integration;
+package Integration;
 
 import ConfigurationCalculator.ConfigurationCalculator;
 import ConfigurationCalculator.Structures.FeatureModelPartiallyCalculated;
 import ConfigurationSerializer.ConfigurationSerializer;
 import CreatorTestData.TestGraphCreator;
-import DecisionMaking.MobiDic.MobiDiCManager;
 import FeatureModelMerger.HardwareSensitiveFeatureModelMerger;
 import FeatureModelMerger.Structures.AvailableEdgeHardware;
 import FeatureModelReader.FeatureModelReader;
@@ -58,8 +57,6 @@ public class OnlineTest {
 
         var testGraphCreator = new TestGraphCreator(_Logger);
         var randomizedGraph = testGraphCreator.randomizeGraphCostWithAdvancedParameters(graph);
-
-        var decisionMaker = new MobiDiCManager(randomizedGraph);
     }
 
     @Test
@@ -94,7 +91,7 @@ public class OnlineTest {
 
         // Expect one slice containing startTask, task1, task2.
         assertEquals(1, slicedModels.size(), "There should be one slice for a simple chain");
-        var slice = slicedModels.get(0);
+        var slice = slicedModels.getFirst();
         assertEquals(3, slice.size(), "Slice should contain 3 features");
         assertEquals("startTask", slice.get(0).getName());
         assertEquals("task1", slice.get(1).getName());
